--- a/src/Views/Widgets/RevisionCompare.xaml
+++ b/src/Views/Widgets/RevisionCompare.xaml
@@ -42,7 +42,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <Grid Grid.Row="0" TextBlock.FontSize="9pt" TextBlock.FontFamily="Consolas">
+                        <Grid Grid.Row="0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
@@ -52,7 +52,7 @@
                             <TextBlock Grid.Column="1" x:Name="txtStartTime" Foreground="{DynamicResource Brush.FG2}" HorizontalAlignment="Right"/>
                         </Grid>
 
-                        <TextBlock Grid.Row="1" x:Name="txtStartSubject" FontSize="10pt" FontFamily="Consolas,Microsoft YaHei UI" VerticalAlignment="Bottom"/>
+                        <TextBlock Grid.Row="1" x:Name="txtStartSubject" FontSize="10pt" VerticalAlignment="Bottom"/>
                     </Grid>
                 </Grid>
             </Border>
@@ -88,7 +88,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <Grid Grid.Row="0" TextBlock.FontSize="9pt" TextBlock.FontFamily="Consolas">
+                        <Grid Grid.Row="0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
@@ -98,7 +98,7 @@
                             <TextBlock Grid.Column="1" x:Name="txtEndTime" Foreground="{DynamicResource Brush.FG2}" HorizontalAlignment="Right"/>
                         </Grid>
 
-                        <TextBlock Grid.Row="1" x:Name="txtEndSubject" FontSize="10pt" FontFamily="Consolas,Microsoft YaHei UI" VerticalAlignment="Bottom"/>
+                        <TextBlock Grid.Row="1" x:Name="txtEndSubject" FontSize="10pt" VerticalAlignment="Bottom"/>
                     </Grid>
                 </Grid>
             </Border>
