--- a/src/Resources/Styles/TextBox.xaml
+++ b/src/Resources/Styles/TextBox.xaml
@@ -7,6 +7,7 @@
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="TextElement.FontFamily" Value="Consolas,Microsoft YaHei UI"/>
         <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="CaretBrush" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -67,6 +68,7 @@
                             Background="Transparent"
                             BorderThickness="0"
                             IsTabStop="False"
+                            RenderOptions.ClearTypeHint="Enabled"
                             CanContentScroll="True"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                     </Border>
