--- a/src/Views/Widgets/Histories.xaml
+++ b/src/Views/Widgets/Histories.xaml
@@ -77,7 +77,7 @@
                                                         </Border>
 
                                                         <Border x:Name="Color" Background="#FFFFB835">
-                                                            <TextBlock Text="{Binding Name}" FontSize="8pt" Margin="4,0" Foreground="Black" FontFamily="Consolas"/>
+                                                            <TextBlock Text="{Binding Name}" FontSize="8pt" Margin="4,0" Foreground="Black"/>
                                                         </Border>
                                                     </StackPanel>
 
@@ -97,7 +97,7 @@
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
 
-                                        <TextBlock Text="{Binding Subject}" FontFamily="Consolas,Microsoft YaHei UI" FontSize="13" RenderOptions.ClearTypeHint="Enabled" Margin="2,0,0,0"/>
+                                        <TextBlock Text="{Binding Subject}" FontSize="13" Margin="2,0,0,0"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -118,7 +118,7 @@
                         <DataGridTemplateColumn Width="80" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Committer.Name}" FontFamily="Consolas,Microsoft YaHei UI" FontSize="9pt" Margin="0,0,8,0"/>
+                                    <TextBlock Text="{Binding Committer.Name}" Margin="0,0,8,0"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -126,7 +126,7 @@
                         <DataGridTemplateColumn Width="72" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding ShortSHA}" FontSize="9pt"/>
+                                    <TextBlock Text="{Binding ShortSHA}"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -134,7 +134,7 @@
                         <DataGridTemplateColumn Width="140" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Committer.Time}" FontSize="9pt"/>
+                                    <TextBlock Text="{Binding Committer.Time}"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -178,12 +178,11 @@
                     <TextBlock 
                         x:Name="txtCounter" 
                         Margin="0,16"
-                        FontFamily="Consolas" FontSize="24" FontWeight="UltraBold" 
-                        HorizontalAlignment="Center" 
-                        TextOptions.TextFormattingMode="Ideal"
+                        FontSize="24" FontWeight="UltraBold" 
+                        HorizontalAlignment="Center"
                         Text="{DynamicResource Text.Histories.Guide}"/>
 
-                    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" TextBlock.FontFamily="Consolas,Microsoft YaHei UI">
+                    <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                         <TextBlock Text="{DynamicResource Text.Histories.Guide_1}" FontSize="14" Margin="0,2"/>
                         <TextBlock Text="{DynamicResource Text.Histories.Guide_2}" FontSize="14" Margin="0,2"/>
                         <TextBlock Text="{DynamicResource Text.Histories.Guide_3}" FontSize="14" Margin="0,2"/>
